# SecondWorld

./: .gitignore  0001.md  CHANGELOG.md  README.md  pyproject.toml
config/: .env.example  agents.yaml  outline.yaml  project.yaml
config/style_guide/: anti_ai_rules.md  draft_examples.yaml  shared.md
config/style_guide/agents/: 主祭术士.md  书生.md  于年.md  于瑞.md  于皓.md  仁善型.md  六星皇朝使臣.md  冷静型.md  副主角.md  匠人.md  医者.md  反派.md  商贾.md  少年.md  师者.md  影卫首领.md  护卫.md  文渊.md  斥候.md  暴烈型.md  柳七.md  玄士.md  玄渊州修士.md  百炼阁使者.md  皇后.md  目光锐利的年轻僧人.md  知己.md  福安.md  竞争者.md  老兵.md  荧惑侯.md  行脚僧首领.md  诗人.md  诡客.md  谋士.md  谨慎型.md  贵胄.md  赵锋.md  阿虎.md  韩霜降.md
data/: chapter_plot_summaries.json  state.json
data/plans/: 0001.json  0002.json  0003.json  0004.json  0005.json
docs/: architecture.md  deepseek_novel_agent_design.md  langchain_refactor_design.md
specs/: product_spec.md
src/: cli.py  config_loader.py  deepseek_client.py  langchain_client.py  langchain_pipeline.py  parsers.py  pipeline.py  prompting.py  utils.py  validators.py  world_reference_manager.py
src/chains/: __init__.py  agent_contribution_chain.py  anti_ai_cleanup_chain.py  draft_chain.py  final_chain.py  plan_chain.py  post_check_chain.py  revision_chain.py  world_material_selector_chain.py
src/rag/: __init__.py  embeddings.py  indexer.py  retriever.py  service.py
tests/: test_config_loader.py  test_contribution_sanitization.py  test_langchain_client.py  test_parsers.py  test_plot_summary_cache.py  test_prompting.py  test_rag_retriever.py  test_rag_service.py  test_world_reference_manager.py
(+73 files in other folders)
