[project]
name = "secondworld"
version = "0.1.0"
description = "Multi-agent novel drafting CLI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langchain",
  "langchain-deepseek",
  "langchain-openai",
  "langgraph",
  "pyyaml",
  "python-dotenv",
  "langchain-anthropic>=1.3.3",
]

[dependency-groups]
dev = [
  "pytest",
]
