[project]
name = "secondworld"
version = "0.1.0"
description = "Multi-agent novel drafting CLI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langchain",
  "langchain-deepseek",
  "langchain-openai",
  "langgraph",
  "pyyaml",
  "python-dotenv",
  "langchain-anthropic>=1.3.3",
  "llama-index>=0.14.15",
  "chromadb>=1.5.2",
  "llama-index-vector-stores-chroma>=0.5.5",
  "langchain-community>=0.4.1",
  "zhipuai>=2.1.5.20250825",
  "pymilvus>=2.6.9",
  "llama-index-vector-stores-milvus>=1.0.0",
  "llama-index-llms-langchain>=0.7.2",
]

[dependency-groups]
dev = [
  "pytest",
]
